# ql-atmoforge

./: .gitignore  CMakeLists.txt  README.md
configs/: atmospheres.json  demo.json  demo_horizontal.json
src/: config.cpp  config.h  datalink.cpp  datalink.h  main.cpp  npy.cpp  npy.h  params.cpp  params.h  parse.cpp  parse.h  sampler.cpp  sampler.h  shard.cpp  shard.h  subprocess.cpp  subprocess.h  tape5.cpp  tape5.h  util.cpp  util.h  worker.cpp  worker.h
